# Hub-Assist

backend/: .env.example  package-lock.json  package.json
backend/src/: app.module.ts
backend/src/cloudinary/: cloudinary.service.ts
backend/src/common/middlewares/: http-logger.middleware.ts
backend/src/common/pagination/: paginate.util.ts
backend/src/common/pagination/dto/: pagination-query.dto.ts
backend/src/config/: app.config.ts  database.config.ts  validation.schema.ts
backend/src/users/: user.entity.ts  users.controller.ts  users.module.ts  users.service.ts
contracts/: Cargo.toml
contracts/access_control/src/: types.rs
contracts/common_types/: Cargo.toml
contracts/common_types/src/: lib.rs  test_contract.rs  types.rs
contracts/hubassist_hub/: Cargo.toml
contracts/manage_hub/: Cargo.toml
contracts/manage_hub/src/: lib.rs  membership_token.rs  staking.rs  tier_management.rs
contracts/membership_token/src/: lib.rs
contracts/payment_escrow/src/: errors.rs  lib.rs  test.rs
contracts/workspace_booking/src/: errors.rs
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/auth/: BiometricLoginView.tsx  LoginForm.tsx  ResendButton.tsx  ResendPassword.tsx
frontend/src/components/landing/: FeaturesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  HubassistLandingPage.tsx  LandingSection.tsx  NewsletterSection.tsx  TrustedBySection.tsx
frontend/src/hooks/: useLoginUser.ts
frontend/src/lib/: api.ts
frontend/src/lib/store/: authStore.ts
(+3 files in other folders)
